--- a/page1.html
+++ b/page1.html
@@ -2,12 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>AngWu</title>
+<title>另一个页面</title>
 </head>
 
 <body>
-  <h1>哈哈哈,还是让我成功的搞出来了</h1>
-  <img src="pic/1.jpg" />
-  <a href="page1.html">点击页面跳转</a>
+	这是另外一个页面
 </body>
 </html>
