--- a/index.html
+++ b/index.html
@@ -2,12 +2,36 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>AngWu</title>
+<link type="text/css" href="css/base.css" rel="stylesheet" />
+<link type="text/css" href="css/commen.css" rel="stylesheet"  />
+<title>Just Do IT</title>
+<style type="text/css">
+	
+	.my-name { font-size:108px; margin-left:100px;}
+	.footer p { margin-left:100px;}
+</style>
 </head>
 
 <body>
-  <h1>哈哈哈,还是让我成功的搞出来了</h1>
-  <img src="pic/1.jpg" />
-  <a href="page1.html">点击页面跳转</a>
+	<div class="wrapper">
+    	<!-- 头部 -->
+        <div class="header w">
+        	<ul class="nav">
+            	<li><a id="nav-now" href="#">HOME</a></li>
+                <li><a href="#">WORK</a></li>
+                <li><a href="#">NOTE</a></li>
+                <li><a href="about.html">ABOUT</a></li>
+            </ul>
+        </div>
+        
+        <!-- 主要内容 -->
+        <div class="main w">
+        	<h1 class="my-name">Wu Qiang</h1>
+        </div>
+        
+        <div class="footer w">
+        	<p>Keep going ...</p>
+        </div>
+    </div>
 </body>
 </html>
