--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link type="text/css" href="css/base.css" rel="stylesheet" />
 <link type="text/css" href="css/commen.css" rel="stylesheet"  />
+<link type="text/css" href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" />
 <title>Just Do IT</title>
 <style type="text/css">
 	
-	.my-name { font-size:108px; margin-left:100px;}
-	.footer p { margin-left:100px;}
+	.my-name { font-size:108px; }
 </style>
 </head>
 
@@ -19,19 +19,20 @@
         	<ul class="nav">
             	<li><a id="nav-now" href="#">HOME</a></li>
                 <li><a href="#">WORK</a></li>
-                <li><a href="#">NOTE</a></li>
+                <li><a href="note.html">NOTE</a></li>
                 <li><a href="about.html">ABOUT</a></li>
             </ul>
         </div>
         
         <!-- 主要内容 -->
         <div class="main w">
-        	<h1 class="my-name">Wu Qiang</h1>
+        	<h1 class="my-name ml100">Wu Qiang</h1>
         </div>
         
-        <div class="footer w">
-        	<p>Keep going ...</p>
-        </div>
+        <!--底部-->
+         <div class="foot w">
+                &copy;WuQiang,2014 &nbsp; Keep Going...<i class="fa fa-paper-plane"></i>
+         </div>
     </div>
 </body>
 </html>
