--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header w">
         	<ul class="nav">
             	<li><a id="nav-now" href="#">HOME</a></li>
-                <li><a href="#">WORK</a></li>
+                <li><a href="work.html">WORK</a></li>
                 <li><a href="note.html">NOTE</a></li>
                 <li><a href="about.html">ABOUT</a></li>
             </ul>
