--- a/work.html
+++ b/work.html
@@ -46,7 +46,11 @@
                 <ul>
                 	<li>
                     	<span class="note-date">16 May 2014 &raquo </span>
-                    	<a class="note-link" href="works/FirstWork.html" >css三列布局</a>
+                    	<a class="note-link" href="works/FirstWork.html" >css三列布局固定宽度</a>
+                    </li>
+                    <li>
+                    	<span class="note-date">16 May 2014 &raquo </span>
+                    	<a class="note-link" href="works/16-5-2014CSS.html" >css三列布局流式布局</a>
                     </li>
                 </ul>
                 
