--- a/note.html
+++ b/note.html
@@ -48,6 +48,10 @@
                     	<span class="note-date">15 May 2014 &raquo </span>
                     	<a class="note-link" href="notes/FirstNote.html" >第一天 First Date</a>
                     </li>
+                    <li>
+                    	<span class="note-date">26 May 2014 &raquo </span>
+                    	<a class="note-link" href="notes/20140526-tab.html" >三种tab的实现方法</a>
+                    </li>
                 </ul>
                 
                 <div class="foot">
