--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
         <div class="header w">
             <ul class="nav">
                 <li><a href="index.html">HOME</a></li>
-                <li><a href="#">WORK</a></li>
+                <li><a href="work.html">WORK</a></li>
                 <li><a href="note.html">NOTE</a></li>
                 <li><a id="nav-now" href="about.html">ABOUT</a></li>
             </ul>
