--- a/work.html
+++ b/work.html
@@ -45,13 +45,17 @@
                 <h1><i class="fa fa-paw"></i> &nbsp; Works List</h1>
                 <ul>
                 	<li>
-                    	<span class="note-date">16 May 2014 &raquo </span>
-                    	<a class="note-link" href="works/FirstWork.html" >css三列布局，固定宽度</a>
+                    	<span class="note-date">26 May 2014 &raquo </span>
+                    	<a class="note-link" target="_blank" href="works/20140526-tab.html" >tab的几种实现方式</a>
                     </li>
                     <li>
                     	<span class="note-date">16 May 2014 &raquo </span>
-                    	<a class="note-link" href="works/16-5-2014-CSS.html" >css三列布局，百分比宽度</a>
+                    	<a class="note-link" target="_blank" href="works/16-5-2014-CSS.html" >css三列布局，百分比宽度</a>
                     </li>
+                	<li>
+                    	<span class="note-date">16 May 2014 &raquo </span>
+                    	<a class="note-link" target="_blank" href="works/FirstWork.html" >css三列布局，固定宽度</a>
+                    </li>   
                 </ul>
                 
                 <div class="foot">
