--- a/about.html
+++ b/about.html
@@ -1,17 +1,17 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link type="text/css" href="css/base.css" rel="stylesheet"  />
-<link type="text/css" href="css/commen.css" rel="stylesheet" />
-<link type="text/css" href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" />
-<title>ABOUT</title>
-<style type="text/css">
-	.about-title h1 {font-size:72px; font-weight:bold;}
-	.about-cont {margin-left:100px; margin-top:100px; line-height:35px;}
-	.head-pic { float:left; }
-	.about-detail {float:left; padding:20px 0 0 50px;}
-</style>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link type="text/css" href="css/base.css" rel="stylesheet"  />
+    <link type="text/css" href="css/commen.css" rel="stylesheet" />
+    <link type="text/css" href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" />
+    <title>ABOUT</title>
+    <style type="text/css">
+    	.about-title h1 {font-size:72px; font-weight:bold;}
+    	.about-cont {margin-left:100px; margin-top:100px; line-height:35px;}
+    	.head-pic { float:left; }
+    	.about-detail {float:left; padding:20px 0 0 50px;}
+    </style>
 </head>
 
 <body>
