--- a/work.html
+++ b/work.html
@@ -1,19 +1,19 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link type="text/css" href="css/base.css" rel="stylesheet" />
-<link type="text/css" href="css/commen.css" rel="stylesheet"  />
-<link type="text/css" href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" />
-<title>WORK</title>
-<style type="text/css">
-	
-	.note-list { display:inline-block; float:left; border-left:1px solid #999; padding-left:50px;}
-	.note-list h1 { color:#3498db; font-weight:bolder; font-size:24px; padding-bottom:20px; }
-	.note-date { font-family: 'Lucida Console', 'Andale Mono', monospace; color: #aaa; padding-right: 5px; font-size: 14px; }
-	.note-link { color:#3498db; text-decoration:underline;}	
-	
-</style>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link type="text/css" href="css/base.css" rel="stylesheet" />
+    <link type="text/css" href="css/commen.css" rel="stylesheet"  />
+    <link type="text/css" href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" />
+    <title>WORK</title>
+    <style type="text/css">
+    	
+    	.note-list { display:inline-block; float:left; border-left:1px solid #999; padding-left:50px;}
+    	.note-list h1 { color:#3498db; font-weight:bolder; font-size:24px; padding-bottom:20px; }
+    	.note-date { font-family: 'Lucida Console', 'Andale Mono', monospace; color: #aaa; padding-right: 5px; font-size: 14px; }
+    	.note-link { color:#3498db; text-decoration:underline;}	
+    	
+    </style>
 </head>
 
 <body>
