--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="zh-CN">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link type="text/css" href="css/base.css" rel="stylesheet" />
-<link type="text/css" href="css/commen.css" rel="stylesheet"  />
-<link type="text/css" href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" />
-<title>Just Do IT</title>
-<style type="text/css">
-	
-	.my-name { font-size:108px; }
-</style>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <link type="text/css" href="css/base.css" rel="stylesheet" />
+    <link type="text/css" href="css/commen.css" rel="stylesheet"  />
+    <link type="text/css" href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet" />
+    <title>Just Do IT</title>
+    <style type="text/css">
+    	.my-name { font-size:108px; }
+    </style>
 </head>
 
 <body>
