--- a/work.html
+++ b/work.html
@@ -44,6 +44,10 @@
                 
                 <h1><i class="fa fa-paw"></i> &nbsp; Works List</h1>
                 <ul>
+                    <li>
+                        <span class="note-date">4 Oct 2014 &raquo </span>
+                        <a class="note-link" href="works/4-10-2014-JS.html" >Javascript 小技巧总结</a>
+                    </li>
                 	<li>
                     	<span class="note-date">26 May 2014 &raquo </span>
                     	<a class="note-link" href="works/20140526-tab.html" >几种tab的实现方式</a>
@@ -55,6 +59,10 @@
                 	<li>
                     	<span class="note-date">16 May 2014 &raquo </span>
                     	<a class="note-link" href="works/FirstWork.html" >css三列布局，固定宽度</a>
+                    </li>
+                    <li>
+                        <span class="note-date">5 May 2014 &raquo </span>
+                        <a class="note-link" href="works/5-5-2014-CSS.html" >水平垂直居中的方法之一</a>
                     </li>
                 </ul>
                 
