--- a/notes/20140527-note.html
+++ b/notes/20140527-note.html
@@ -43,7 +43,7 @@
                     <p>但是，改变自己现在不晚，从现在开始，不要一点点改变的旧性子，对自己狠下手，因为，我已经迫不及待想要回当初那个属于我的明亮的天空！输在了今天，明天还是我的！</p>
                     
                     <!-- 多说评论框 start -->
-                    <div class="ds-thread" data-thread-key="1" data-title="第一篇笔记" data-url="http://angwu.github.io/notes/FirstNote.html"></div>
+                    <div class="ds-thread" data-thread-key="1" data-title="随笔" data-url="http://angwu.github.io/notes/FirstNote.html"></div>
                     <!-- 多说评论框 end -->
                     <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
                     <script type="text/javascript">
@@ -68,17 +68,6 @@
         </div>
 
     </div>
-    <script type="text/javascript">
-    /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-    var disqus_shortname = 'angwu'; // required: replace example with your forum shortname
-
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function () {
-        var s = document.createElement('script'); s.async = true;
-        s.type = 'text/javascript';
-        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
-        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-    }());
-    </script>
+    
 </body>
 </html>
