--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                 
                 <div class="about-detail">
             		<i>I'm WuQiang</i>
-                    <p>An EC student , aim at Web programing , looking for an internship now .</p>
+                    <p>An EC student , aim at Web programing , looking for a job now .</p>
                     <p>Email : reganwu@foxmail.com</p>
                 	<address>Address : Chongqing University of Posts and Telecommunications ` ChongQing ` China</address>
             	</div>
