--- a/work.html
+++ b/work.html
@@ -45,6 +45,10 @@
                 <h1><i class="fa fa-paw"></i> &nbsp; Works List</h1>
                 <ul>
                     <li>
+                        <span class="note-date">5 Oct 2014 &raquo </span>
+                        <a class="note-link" href="works/5-10-2014-JS.html" >Javascript 单例模式</a>
+                    </li>
+                    <li>
                         <span class="note-date">4 Oct 2014 &raquo </span>
                         <a class="note-link" href="works/4-10-2014-JS.html" >Javascript 小技巧总结</a>
                     </li>
